--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <li>Double-check the wallet address before sending</li>
         <li>Include sufficient TRX for transaction fees (minimum 10 TRX recommended)</li>
         <li>After sending, upload your transaction screenshot as proof</li>
-        <li>Your balance will update automatically after 3 network confirmations</li>
+        <li>Your balance will be update immediately after confirmation (Less than 1 minute)</li>
       </ul>
     </div>
   </div>
